--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 server.port=8889
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/todo
+spring.datasource.username=user
+spring.datasource.password=password
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
